--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing form_layer_open.js\n"
+      "Overwriting form_layer_open.js\n"
      ]
     }
    ],
@@ -42,6 +42,41 @@
     "        ,\n",
     "        btn:['保存','取消'],\n",
     "        btn1: function (index,layero) {\n",
+    "        },\n",
+    "        btn2:function (index,layero) {\n",
+    "             layer.close(index);\n",
+    "        }\n",
+    " \n",
+    "    });    \n",
+    "        \n",
+    "    })\n",
+    "\n",
+    "\n",
+    "\n",
+    "//content中id val的获取\n",
+    "\n",
+    "    $(\"body\").on(\"click\",\".edit_desc\",function(){\n",
+    "        \n",
+    "      var index =  layer.open({\n",
+    "        id:1,\n",
+    "        type: 1,\n",
+    "        title:'Update Description',\n",
+    "        skin:'layui-layer-rim',\n",
+    "        area:['450px', 'auto'],\n",
+    "            \n",
+    "        content: ' <div class=\"row\" style=\"width: 420px;  margin-left:7px; margin-top:10px;\">'\n",
+    "            +'<div class=\"col-sm-12\">'\n",
+    "            +'<div class=\"input-group\">'\n",
+    "            //+'<span class=\"input-group-addon\"> 新 密 码   :</span>'\n",
+    "            +'<textarea name=\"desc\" placeholder=\"请输入内容\" class=\"layui-textarea\" id=\"form_edit_desc\" style=\"width: 390px;\"></textarea>'\n",
+    "            +'</div>'\n",
+    "            +'</div>'\n",
+    "              +'</div>'\n",
+    "        ,\n",
+    "        btn:['保存描述','取消'],\n",
+    "        btn1: function (index,layero) {\n",
+    "         console.log('edit_desc',$(\"#form_edit_desc\").val()) \n",
+    "        //post/get回调函数在此定义\n",
     "        },\n",
     "        btn2:function (index,layero) {\n",
     "             layer.close(index);\n",
