Add commas to a number

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -89,6 +89,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing addCommasToNumber.js\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file addCommasToNumber.js\n",
+    "//给数字添加逗号--美元数字:10,000\n",
+    "// Add commas to a number\n",
+    "my={\n",
+    "    \n",
+    "}\n",
+    "    my.addCommas = function (n) {\n",
+    "      while (/(\\d+)(\\d{3})/.test(n.toString())) {\n",
+    "        n = n.toString().replace(/(\\d+)(\\d{3})/, '$1'+','+'$2');\n",
+    "      }\n",
+    "      return n;\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
