add get param info

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -117,6 +117,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing get_param_from_url.js\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file get_param_from_url.js\n",
+    "    /*获取URL传过来的参数*/\n",
+    "    function get_request_args(argname){  \n",
+    "        var url = decodeURI(document.location.href);//需要解码，一些参数有空格等\n",
+    "        var arrStr = url.substring(url.indexOf(\"?\")+1).split(\"/\");//根据实际页面修改\n",
+    "        //console.log('arrStr',arrStr);\n",
+    "        for(var i = 0; i < arrStr.length; i++) {\n",
+    "            var loc = arrStr[i].indexOf(argname+\"=\");  \n",
+    "            if(loc != -1){\n",
+    "                //console.log('loc',loc);\n",
+    "                return arrStr[i].replace(argname+\"=\",\"\").replace(\"?\",\"\");\n",
+    "                break;\n",
+    "            }\n",
+    "        }\n",
+    "        return \"\";\n",
+    "    }\n",
+    "    var TagName = get_request_args(\"tag\"); //http://0.0.0.0:9010/tags/tag=recommendation"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
